# canopyHydrodynamics

./: .dockerignore  .envrc  .gitattributes  .gitignore  .numba_config.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  app.py  canhydro.toml  compose.yaml  dripDropFlow.toml  efficiency.md  examples.md  local_run.py  logging_config.yml  new_README.md  paper.bib  paper.html  paper.json  paper.md  pre-commit-config.yaml  profile  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_old.txt  requirements_olld.txt  requirements_prev.txt  requirements_pytest.txt  setup.py  sftp_utils_server.py  test_requirements.txt  tutorial.ipynb  user_def_config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  deploy.yml  main.yml  test_and_lint.yml
Cylinders/: cli.ipynb
JupyterNotebook/: cli.ipynb
canhydro/: CylManager.py  Cylinder.py  CylinderCollection.py  DataClasses.py  Forester.py  Plotter.py  alternate_graph_methods.py  geometry.py  global_vars.py  local_run.py  utils.py
code_samples/: alternate_graph_methods.py  cylinder_plotting_examples.ipynb  figure_create.py  sensitivity_analysis copy.py  sensitivity_analysis.py
data/: fifthFile.txt
docs/: Func_deep_dive.md  Makefile  README.md  conf.py  extra_snippets.md  flow_identification.md  metrics_definitions.rst  qsms.md  requirements.txt  tutorial.ipynb  user_def_config.toml
examples/: alternate_graph_methods.py  benchmark_comp.py  numba_alternatives.py  parallelism.py  sensitivity_analysis.py  try_alphashape.py  tutorial.ipynb
legacy_code/: alternate_graph_methods.py  code_prototype.ipynb  code_prototype.py  local_run.py
log/: log_1699365916  log_1699366164  log_1699366201  log_1699366236
scripts/: alternate_graph_methods.py  basic_recipies.py  benchmark_comp.py  compare_utils.py  efficiency.md  figure_create.py  local_run.py  numba_alternatives copy.py  numba_alternatives.py  parallelism.py  plotting_scratch.ipynb  proj_evaluation.py  rusty_cylinder_collection.py  sensitivity_analysis.ipynb  sensitivity_analysis.py  sftp_utils.py  (+5 more)
(+178 files in other folders)
